fix: toggle functionality , Transparent background , spacing

--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -1,15 +1,13 @@
+@import '../../styles/index.scss';
+
 .toggler {
 	border: 2px solid #666666;
 	border-radius: 100px;
 	margin: 1% 0%;
-	padding: 0.2%;
 	position: relative;
-
+    
 	.selected-toggle {
 		background: #1da0bc;
-	}
-
-	.unselected-toggle {
 	}
 
 	.buttonStyle-toggle {
@@ -19,27 +17,29 @@
 		width: 50%;
 		padding: 5% 0;
 		transition: 0.2s ease-in;
+		border: 2px solid transparent;
+    	background-clip: padding-box;
 	}
 
 	.yearly {
 		@extend .buttonStyle-toggle;
-		@extend .unselected-toggle;
 	}
 	
 	.monthly {
 		@extend .buttonStyle-toggle;
-		@extend .unselected-toggle;
 	}
 
 	.toggle_button {
-		position: absolute;
+		position:absolute;
 		@extend .buttonStyle-toggle;
 		@extend .selected-toggle;
+		width: 50%;
 		z-index: 1;
 	}
 
 	.toggleButton {
-		transform: translateX(99.3%);
+		transform: translateX(100%);
 		@extend .selected-toggle;
 	}
 }
+ 
